--- a/Clima/Clima/View/Base.lproj/Main.storyboard
+++ b/Clima/Clima/View/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                                 <color key="tintColor" systemColor="labelColor"/>
                                                 <state key="normal" backgroundImage="location.circle.fill" catalog="system"/>
                                                 <connections>
-                                                    <action selector="locationPressed:" destination="gDd-NJ-7VG" eventType="touchUpInside" id="F7n-F8-at5"/>
+                                                    <action selector="locationPressed:" destination="gDd-NJ-7VG" eventType="touchUpInside" id="R6i-Aa-xgt"/>
                                                 </connections>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="right" clearsOnBeginEditing="YES" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="ibt-rt-F09">
